# flatbuffer-histogram-generator

./: CMakeLists.txt  README.md  dataarray.h  histogram_sender.h  main.cpp
